Minor UI Changes: Edited some styles and added heading on some pages

--- a/views/sms_subscriptions.hbs
+++ b/views/sms_subscriptions.hbs
@@ -59,7 +59,7 @@
                                             <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-subscriptions .item-subscriptions" href="#accordion-subscriptions .item-subscriptions" style="font-size: 16px;color: #584C33!important;font-weight: bold;">Create New Subscription</a></h5>
                                         </div> --}}
 
-                                        <span style="color: red">NO CREATION OF SUBSCRIPTION (Should be done through SMS)<br> send "INFO" to 21585119</span>
+                                        <span style="color: #657429; padding: 10px; font-weight:bold">NO CREATION OF SUBSCRIPTION (Should be done through SMS)<br> send "INFO" to 21585119</span>
                                         <div class="collapse item-subscriptions" role="tabpanel" data-parent="#accordion-subscriptions">
                                             
                                         <div class="card-body" style="color: #332c1f;">
