Minor UI Changes: Updated some styles

--- a/views/detailed_crop_calendar.hbs
+++ b/views/detailed_crop_calendar.hbs
@@ -110,7 +110,7 @@ html, body {
                     </div>
 
                     <div class="col" style="margin-right: 650px; padding-top: 15px">
-                        <h6>Detailed Crop Calendar Information ({{crop_plan_details.crop_plan}})</h6>
+                        <h6>{{crop_plan_details.farm_name}} Detailed Crop Calendar Information ({{crop_plan_details.crop_plan}})</h6>
             
                     </div>
 
