--- a/views/user_management.hbs
+++ b/views/user_management.hbs
@@ -148,7 +148,7 @@
                                       {{/each}}
                                     </table>
 
-                                    <button type="submit" class="hide btn btn-primary float-right" id="btn_submit" name="" >Create Account</button>
+                                    <button type="submit" class="hide btn btn-primary float-right" id="btn_submit" name="" style="margin-top: 20px;">Create Account</button>
                                 </div>
                                 {{!-- END OF TAB 2 --}}
 
