--- a/views/farm_productivity_report.hbs
+++ b/views/farm_productivity_report.hbs
@@ -537,10 +537,10 @@
 		                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 0px;">LA Rice Mill</h1>
 		            </div>
 		            <div>
-		                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 0px;">Farm Productivity Summary Report for All Farms</h1>
+		                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 0px;">Farm Productivity Summary Report for All</h1>
 		            </div>
 		            <div>
-		                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 8px;">For the Crop Cycle in {{currentCycle.crop_plan}}</h1>
+		                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 8px;">For Crop Cycles until {{currentCycle.crop_plan}}</h1>
 		            </div>
 		        </div>
 		    </div>
