--- a/views/summary_harvest_report.hbs
+++ b/views/summary_harvest_report.hbs
@@ -250,8 +250,8 @@
 				<div class="mx-3 mb-2">
 					<div class="d-flex w-100 flex-column">
 						<div class="w-100">
-							<div class="w-100 border border-secondary d-flex flex-column rounded">
-								<div class="text-white w-100 px-3 py-2 text-center rounded-top bg-dark">
+							<div class="w-100 d-flex flex-column ">
+								<div class="text-white w-100 px-3 py-2 text-center bg-dark">
 									<div>Historical Harvests</div>
 									<div class="text-small" style="font-size: 10px;">
 										{{seed_chart_lbls}}
@@ -345,8 +345,8 @@
 					<div class="d-flex w-100 mb-2">
 						<div class="w-100 d-flex">
 						<div class="w-100">
-							<div class="border border-secondary d-flex flex-column rounded" >
-								<div class="text-white w-100 px-3 py-2 text-center rounded-top bg-dark">
+							<div class="d-flex flex-column " >
+								<div class="text-white w-100 px-3 py-2 text-center bg-dark">
 									Nutrient Timing {{this.farm_name}}
 								</div>
 								<!-- Nutrient chart filters -->
