--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -16,7 +16,7 @@
                     <a aria-expanded="{{# if farms_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#farms" href="#" id="firstDp"
                         class="dropdown-lbl text-decoration-none {{# if farm_tab}}active{{/if}}{{# if monitor_farms_tab}}active{{/if}}{{# if calendar_tab}}active{{/if}}{{# if disaster}}active{{/if}}" style="">
                         <i class="fas fa-farm" style="font-size: 16px;margin-right: 10px;"></i>Farms &nbsp;&nbsp;
-                        <i class="fas fa-caret-down"></i> 
+                        <i class="{{# if farms_mgt_tab}}fas fa-caret-up{{else}}fas fa-caret-down{{/if}}"></i> 
                     </a>
                     
                     <div class="collapse {{# if farms_mgt_tab}}show{{/if}}" style="" id="farms">
@@ -33,7 +33,7 @@
                 <div class="nav-item dropdown show text-decoration-none" style="text-decoration: none;padding: 16px;margin-bottom: 0px;">
                     <a aria-expanded="{{# if material_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#materials" href="#" class="dropdown-lbl text-decoration-none {{# if inventory_tab}}active{{/if}}{{# if orders_tab}}active{{/if}}" href="#" style="font-size: 16px" id="secondDp">
                         <i class="fas fa-box" style="margin-right: 10px;"></i>Material Management &nbsp;&nbsp;
-                        <i class="fas fa-caret-down"></i> 
+                        <i class="{{# if material_mgt_tab}}fas fa-caret-up{{else}}fas fa-caret-down{{/if}}"></i> 
                     </a>
                     <div class="collapse {{# if material_mgt_tab}}show{{/if}}" style="" id="materials">
                         <a class="dropdown-item {{# if inventory_tab}}active{{/if}}" href="/inventory" style="">Inventory</a>
@@ -43,11 +43,13 @@
             </li>
             {{/if}}
 
+            {{#if purchasing_role}}
+            {{else}}
             <li class="nav-item" style="">
                 <div class="nav-item dropdown " style="margin-bottom: 0px;padding: 16px;">
-                    <a aria-expanded="{{#if nutrient_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#nutrient_mgt" href="#" class="dropdown-lbl text-decoration-none {{# if nutrient_mgt_discover}}active{{/if}}{{# if nutrient_mgt_plan}}active{{/if}}{{# if nutrient_mgt_reco}}active{{/if}}"id="sixthDp"><i class="dropdown-lbl fas fa-hand-holding-seedling" 
+                    <a aria-expanded="{{#if nutrient_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#nutrient_mgt" href="#" class="dropdown-lbl text-decoration-none {{# if nutrient_mgt_discover}}active{{/if}}{{# if nutrient_mgt_plan}}active{{/if}}{{# if nutrient_mgt_reco}}active{{/if}}"id="thirdDp"><i class="dropdown-lbl fas fa-hand-holding-seedling" 
                         style="margin-right: 10px;"></i>Nutrient Management &nbsp;&nbsp;
-                        <i class="fas fa-caret-down"></i>
+                        <i class="{{# if nutrient_mgt_tab}}fas fa-caret-up{{else}}fas fa-caret-down{{/if}}"></i> 
                     </a>
                     <div class="collapse {{# if nutrient_mgt_tab}}show{{/if}}" style="" id="nutrient_mgt">
                         <!-- <a class="dropdown-item {{# if nutrient_mgt_discover}}active{{/if}}" href="/nutrient_mgt/discover" style="">Discover</a> -->
@@ -56,12 +58,15 @@
                     </div>
                 </div>
             </li>
-
+            {{/if}}
+            
+            {{#if purchasing_role}}
+            {{else}}
             <li class="nav-item" style="">
                 <div class="nav-item dropdown " style="margin-bottom: 0px;padding: 16px;">
-                    <a aria-expanded="{{# if pd_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#pestAndDisease" href="#" class="dropdown-lbl text-decoration-none {{# if pest_and_disease_discover}}active{{/if}}{{# if pest_and_disease_frequency}}active{{/if}} {{# if pest_and_disease_diagnoses}}active{{/if}}"id="thirdDp"><i class="dropdown-lbl fas fa-bug" 
+                    <a aria-expanded="{{# if pd_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#pestAndDisease" href="#" class="dropdown-lbl text-decoration-none {{# if pest_and_disease_discover}}active{{/if}}{{# if pest_and_disease_frequency}}active{{/if}} {{# if pest_and_disease_diagnoses}}active{{/if}}"id="fourthDp"><i class="dropdown-lbl fas fa-bug" 
                         style="margin-right: 10px;"></i>Pest and Disease &nbsp;&nbsp;
-                        <i class="fas fa-caret-down"></i>
+                        <i class="{{# if pd_mgt_tab}}fas fa-caret-up{{else}}fas fa-caret-down{{/if}}"></i> 
                     </a>
                     <div class="collapse {{# if pd_mgt_tab}}show{{/if}}" style="" id="pestAndDisease">
                         <a class="dropdown-item {{# if pest_and_disease_discover}}active{{/if}}" href="/pest_and_disease/discover" style="">Discover</a>
@@ -84,13 +89,12 @@
                 </div>
             </li> --}}
 
-            {{#if purchasing_role}}
-            {{else}}
+            
             <li class="nav-item">
                 <div class="nav-item dropdown text-decoration-none" style="text-decoration: none;padding: 16px;margin-bottom: 0px;">
                     <a aria-expanded="{{# if sms_mgt_tab}}true{{else}}false{{/if}}" data-toggle="collapse" data-target="#smsManagement" href="#" class="dropdown-lbl text-decoration-none {{# if subscriptions_tab}}active{{/if}}{{# if messages_tab}}active{{/if}}" href="#" id="fifthDp">
                         <i class="fas fa-sms" style="margin-right: 10px;"></i>SMS Management  &nbsp;&nbsp;
-                        <i class="fas fa-caret-down"></i>
+                        <i class="{{# if sms_mgt_tab}}fas fa-caret-up{{else}}fas fa-caret-down{{/if}}"></i> 
                     </a>
                     <div class="collapse {{# if sms_mgt_tab}}show{{/if}}" style="" id="smsManagement">
                         <a class="dropdown-item {{# if subscriptions_tab}}active{{/if}}" href="/sms/subscriptions" style="">Subscriptions</a>
@@ -100,7 +104,7 @@
             </li>
             {{/if}}
 
-                {{#if admin_role}}
+            {{#if admin_role}}
             <li class="nav-item" style="padding:16px">
                 <a class="dropdown-lbl text-decoration-none {{# if users_tab}}active{{/if}}" href="/user_management" style="font-size: 16px;"><i class="fas fa-user-circle" style="font-size: 16px; margin-right: 10px"></i>User Management
                 </a>
@@ -119,25 +123,31 @@
 <script>
 $('nav a#firstDp').click(function(){
 $('nav a#firstDp i.fas.fa-caret-down').toggleClass("rotate");
+$('nav a#firstDp i.fas.fa-caret-up').toggleClass("rotate");
 });
 
 $('nav a#secondDp').click(function(){
 $('nav a#secondDp i.fas.fa-caret-down').toggleClass("rotate");
+$('nav a#secondDp i.fas.fa-caret-up').toggleClass("rotate");
 });
 
 $('nav a#thirdDp').click(function(){
 $('nav a#thirdDp i.fas.fa-caret-down').toggleClass("rotate");
+$('nav a#thirdDp i.fas.fa-caret-up').toggleClass("rotate");
 });
 
 $('nav a#fourthDp').click(function(){
 $('nav a#fourthDp i.fas.fa-caret-down').toggleClass("rotate");
+$('nav a#fourthDp i.fas.fa-caret-up').toggleClass("rotate");
 });
 
 $('nav a#fifthDp').click(function(){
 $('nav a#fifthDp i.fas.fa-caret-down').toggleClass("rotate");
+$('nav a#fifthDp i.fas.fa-caret-up').toggleClass("rotate");
 });
 
 $('nav a#sixthDp').click(function(){
 $('nav a#sixthDp i.fas.fa-caret-down').toggleClass("rotate");
+$('nav a#sixthDp i.fas.fa-caret-up').toggleClass("rotate");
 });
 </script>
