--- a/views/summary_harvest_report.hbs
+++ b/views/summary_harvest_report.hbs
@@ -55,7 +55,7 @@
     </div>
 
     <div class="col" style="margin-right: 650px; padding-top: 5px; width: auto;"> 
-    	<h6 class="font-weight-bold m-0" style="color: white;">Detailed Harvest Report ({{crop_plans.start}} to {{crop_plans.end}})</h6> <!-- Change to handlebar later -->
+    	<h6 class="font-weight-bold m-0" style="color: white;">Detailed Harvest Report: {{crop_plans.end}}</h6> <!-- Change to handlebar later -->
     </div>
 
     <i class="fas fa-print" style="color: rgb(255,255,255);" value="print" id="print" type="button"></i>
@@ -486,7 +486,7 @@
                 <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 0px;">Harvest Report for All Farms</h1>
             </div>
             <div>
-                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 8px;">For the Crop Cycle on {{crop_plans.start}} to {{crop_plans.end}}</h1>
+                <h1 style="text-align: center;font-size: 22px;color: #F1E8D7;margin-bottom: 8px;">For the Crop Cycle in {{crop_plans.end}}</h1>
             </div>
         </div>
     	</div>
@@ -494,7 +494,7 @@
 
     <div class="row">
         <div class="col" style="background-color:#212529;margin-top: 15px; height: auto">
-            <h4 style="color:white; font-weight: bold; margin-bottom: 15px">{{crop_plans.start}} to {{crop_plans.end}}</h4>
+            <h4 style="color:white; font-weight: bold; margin-bottom: 15px">{{crop_plans.end}}</h4>
         </div>
     </div>
     <div class="row">
