--- a/views/detailed_farm_report.hbs
+++ b/views/detailed_farm_report.hbs
@@ -45,7 +45,7 @@
             </div>
 
             <div class="col" style="margin-right: 650px; padding-top: 5px"> 
-                <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">{{farm.farm_name}} Productivity Report ({{calendar.crop_plan}})</h6> <!-- Change to handlebar later -->
+                <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">{{farm.farm_name}} Productivity Report: {{calendar.crop_plan}}</h6> <!-- Change to handlebar later -->
             </div>
         <i class="fas fa-print" type="button" value="print" id="print" style="color: rgb(255,255,255);"></i>
          
