--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,14 +1,18 @@
 <section class="vh-100">
   <div class="container-fluid" style="background-color: #F1E8D7;">
     <div class="row">
-      <div class="col-sm-6 text-black">
-
-        <div class="px-5 ms-xl-4">
-          <i class="fa fa-sign-in fa-2x me-3 pt-5 mt-xl-4" style="color: #657429;"></i>
-          <span class="h1 fw-bold mb-0">Welcome!</span>
+      <div class="col-sm-6 text-black"> 
+        
+        <div class="card shadow mb-4" style="align-items: center; display: flex; justify-content: center; max-height: 550px; margin-top: 75px !important; max-width: 600px; margin: 0px auto;">
+          
+        <div class="px-5 ms-xl-4 d-flex align-items-center">
+          {{!-- <i class="fa fa-sign-in fa-2x me-3 pt-5 mt-xl-4" style="color: #657429;"></i> --}}
+          <img class="fa-2x me-3 pt-5 mt-xl-4" src="../../images/LA-Rice-Mill.png"
+          alt="Login image" style="width: 140px; height: 120px;">
+          <span class="h1 fw-bold mb-0" style="margin-top: 80px; margin-right: 150px !important">Welcome!</span>
         </div>
 
-        <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+        <div class="d-flex align-items-center" style="margin-top: 50px; margin-right: 100px">
 
           <form action="/login" method="post" style="width: 23rem;">
             <input type="hidden" name="cur_date" id="cur_date" value="{{cur_date}}">
@@ -16,18 +20,18 @@
 
             <div class="form-outline mb-4">
               <label class="form-label" for="form2Example18"></label>
-              <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username"/>
+              <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username" style="width: 450px !important; max-width:inherit";/>
               
             </div>
 
             <div class="form-outline mb-4">
               <label class="form-label" for="form2Example28"></label>
-              <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password"/>
+              <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password" style="width: 450px !important; max-width:inherit"/>
               
             </div>
 
             <div class="pt-1 mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+              <button class="btn btn-primary btn-lg btn-block" type="submit" style="width: 450px !important; max-width:inherit">Login</button>
             </div>
 
             <p class="small mb-5 pb-lg-2"><a class="text-muted" href="/reset_password">Forgot password?</a></p>
@@ -36,9 +40,13 @@
 
         </div>
 
+        </div>
+
+
+
       </div>
       <div class="col-sm-6 px-0 d-none d-sm-block">
-        <img src="../../images/LA-Rice-Mill.png"
+        <img src="../../images/farm-background.png"
           alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
       </div>
     </div>
