Minor UI Changes (changed to 'active farms out of total farms' on dashboard active farm count)

--- a/views/home_v2.hbs
+++ b/views/home_v2.hbs
@@ -10,7 +10,7 @@
                     <div class="row d-lg-flex align-items-center justify-content-lg-center no-gutters">
                         <div class="col mr-2">
                             <div class="text-uppercase text-primary font-weight-bold text-xs" style="margin-top: -20px;"><span>Active Farms</span></div>
-                            <div class="text-dark font-weight-bold h5 mb-0"><span id="numFarms"></span></div>
+                            <div class="text-dark font-weight-bold h5 mb-0"><span id="numActive"></span> out of <span id="numFarms"></span></div>
                         </div>
                         <div class="col-auto">
                             {{!-- <svg class="bi bi-house-fill fa-2x text-gray-300" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16">
