Add reported symptoms (dashboard)

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -70,8 +70,8 @@
                 <div class="card-body">
                     <div class="row align-items-center no-gutters">
                         <div class="col mr-2">
-                            <div class="text-uppercase text-warning font-weight-bold text-xs" style="margin-top: -20px;"><span>Farmer Queries</span></div>
-                            <div class="text-dark font-weight-bold h5 mb-0"><span>0</span></div>
+                            <div class="text-uppercase text-warning font-weight-bold text-xs" style="margin-top: -20px;"><span>Reported Queries (Past 7 days)</span></div>
+                            <div class="text-dark font-weight-bold h5 mb-0" id="reported_symptoms"><span>0</span></div>
                         </div>
                         <div class="col-auto">
                             <i class="fa fa-mobile fa-2x text-gray-300" style="font-size:xx-large; margin-right: 10px"></i>
