--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-6 text-black"> 
         
-        <div class="card shadow mb-4" style="align-items: center; display: flex; justify-content: center; max-height: 550px; margin-top: 75px !important; max-width: 600px; margin: 0px auto;">
+        <div class="card shadow mb-4 d-flex" style="align-items: center; display: flex; justify-content: center; max-height: 550px; margin-top: 60px !important; max-width: 600px; margin: 0px auto;">
           
         <div class="px-5 ms-xl-4 d-flex align-items-center">
           {{!-- <i class="fa fa-sign-in fa-2x me-3 pt-5 mt-xl-4" style="color: #657429;"></i> --}}
@@ -12,11 +12,13 @@
           <span class="h1 fw-bold mb-0" style="margin-top: 80px; margin-right: 150px !important">Welcome!</span>
         </div>
 
-        <div class="d-flex align-items-center" style="margin-top: 50px; margin-right: 100px">
+        <div class="d-flex align-items-center" style="margin-top: 30px; margin-right: 100px;">
 
           <form action="/login" method="post" style="width: 23rem;">
             <input type="hidden" name="cur_date" id="cur_date" value="{{cur_date}}">
-            <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3>
+            <h3 class="fw-normal mb-3 pb-0" style="letter-spacing: 1px;">Log in</h3>
+
+            {{> messages}}
 
             <div class="form-outline mb-4">
               <label class="form-label" for="form2Example18"></label>
