Edited forgot password page (frontend + some minor changes to req.flash)

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,13 +22,13 @@
 
             <div class="form-outline mb-4">
               <label class="form-label" for="form2Example18"></label>
-              <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username" style="width: 450px !important; max-width:inherit";/>
+              <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username" style="width: 450px !important; max-width:inherit" required/>
               
             </div>
 
             <div class="form-outline mb-4">
               <label class="form-label" for="form2Example28"></label>
-              <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password" style="width: 450px !important; max-width:inherit"/>
+              <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password" style="width: 450px !important; max-width:inherit" required/>
               
             </div>
 
