--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -12,7 +12,7 @@
 {{/if}}
 
 {{#if success_msg}}
-    <div class="popup-dialog-msg shadow dialog-msg">
+    <div class="inp-success popup-dialog-msg shadow dialog-msg" style="height: auto; width: 450px">
         <div class="d-flex w-100 mt-1">
             <div class="ml-auto mr-2">
                 <i class="fa fa-times" aria-hidden="true" style="cursor: pointer;" onclick="$(this).parent().parent().parent().remove();"></i>
