--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,10 +6,6 @@
 	background-color: #FAEBD7;
 }
 
-/* .tertiary {
-
-} */
-
 .user_number {
 	width:  80px;
 	border-radius:  5px !important;
@@ -84,7 +80,7 @@
 }*/
 
 .tooltip-inner {
-	white-space:  pre-wrap !!important;
+	white-space:  pre-wrap !important;
 	/*min-width:  max-content !important;*/
 }
 
@@ -305,6 +301,19 @@ body {
 	padding: 2px 0 6px 6px;
 	background: #ffe6eb;
 	color:  red;
+	font-weight:  bold;
+}
+
+.inp-success {
+	margin-top:  10px;
+	padding: 5px;
+	width:  100%;
+	border: 2px solid #1CC88A;
+	border-radius: 4px;
+	line-height: 1;
+	padding: 2px 0 6px 6px;
+	background: #d9ead3;
+	color:  #1CC88A;
 	font-weight:  bold;
 }
 
