--- a/views/forgot_pass.hbs
+++ b/views/forgot_pass.hbs
@@ -1,5 +1,5 @@
 
-<div class="">
+{{!-- <div class="">
 	<form action="/reset_password" method="post">
 		<div class="form-outline mb-4">
           <input type="text" id="username" name="username" class="form-control form-control-lg" required />
@@ -11,4 +11,57 @@
           <button class="btn btn-info btn-lg btn-block" type="submit">Procceed</button>
         </div>
 	</form>
-</div>
+</div> --}}
+
+
+<section class="w-100 vh-100" style="background-color: #F1E8D7;">
+  <div class="container-fluid" >
+    <div class="row">
+      <div class="col text-black"> 
+        
+        <div class="card shadow mb-4 d-flex" style="align-items: center; display: flex; justify-content: center; max-height: 550px; margin-top: 60px !important; max-width: 600px; margin: 0px auto;">
+          
+        <div class="px-5 ms-xl-10 d-flex align-items-center">
+          <i class="fa fa-question-circle fa-2x me-3 pt-5 mt-xl-4" style="color: #657429;"></i>
+          {{!-- <img class="fa-2x me-3 pt-5 mt-xl-4" src="../../images/LA-Rice-Mill.png"
+          alt="Login image" style="width: 140px; height: 120px;"> --}}
+          <span class="h1 fw-bold mb-0" style="margin-top: 80px; margin-right: 150px !important; width:inherit !important">Reset Password</span>
+        </div>
+
+        <div class="d-flex align-items-center" style="margin-top: 30px; margin-right: 100px;">
+
+          <form action="/reset_password" method="post" style="width: 23rem;">
+            {{!-- <input type="hidden" name="cur_date" id="cur_date" value="{{cur_date}}"> --}}
+            <h3 class="fw-normal mb-3 pb-0" style="letter-spacing: 1px;">Send OTP to</h3>
+
+            {{> messages}}
+
+            <div class="form-outline mb-4">
+              <label class="form-label" for="username"></label>
+              <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username" style="width: 450px !important; max-width:inherit" required/>
+              
+            </div>
+
+            <div class="pt-1 mb-4">
+              <button class="btn btn-primary btn-lg btn-block" type="submit" style="width: 450px !important; max-width:inherit">Submit</button>
+            </div>
+            
+            <p class="small mb-5 pb-lg-2"><i class="fa fa-arrow-circle-left text-muted" style="padding-right: 10px;"></i><a class="text-muted" href="/login">Back to Login</a></p>
+
+          </form>
+
+        </div>
+
+        </div>
+
+
+
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<script>
+  var view = 'resetPassword';
+</script>
