--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="mx-3 mb-3">
-            <h6 class="text-danger"><strong>{{error_msg}}</strong></h6>
+            <h6 class="text-danger"><strong style="color: red !important;">{{error_msg}}</strong></h6>
         </div>
     </div>
 {{/if}}
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="mx-3 mb-3">
-            <h6 class="text-success"><strong>{{success_msg}}</strong></h6>
+            <h6 class="text-success"><strong style="color: green !important;">{{success_msg}}</strong></h6>
         </div>
     </div>
 {{/if}}
