--- a/views/forgot_pass.hbs
+++ b/views/forgot_pass.hbs
@@ -25,7 +25,7 @@
           <i class="fa fa-question-circle fa-2x me-3 pt-5 mt-xl-4" style="color: #657429;"></i>
           {{!-- <img class="fa-2x me-3 pt-5 mt-xl-4" src="../../images/LA-Rice-Mill.png"
           alt="Login image" style="width: 140px; height: 120px;"> --}}
-          <span class="h1 fw-bold mb-0" style="margin-top: 80px; margin-right: 150px !important; width:inherit !important">Reset Password</span>
+          <span class="h1 fw-bold mb-2" style="margin-top: 80px; width:inherit !important">Forgot your Password?</span>
         </div>
 
         <div class="d-flex align-items-center" style="margin-top: 30px; margin-right: 100px;">
