--- a/views/add_farm.hbs
+++ b/views/add_farm.hbs
@@ -5,7 +5,9 @@
         <h3 class="text-dark mb-0" style="font-family: Roboto, sans-serif;color: #584c33;font-weight: 500;">Farms</h3>
     </div> -->
 
-    <h3 class="text-dark mb-4" style="font-weight: bold;color: #332c1f; position: sticky"></a>&nbsp;{{title}}&nbsp;</h3>
+     <div class="d-sm-flex justify-content-between align-items-center mb-4">
+        <h3 class="text-dark mb-0">{{title}}</h3><a class="btn btn-primary disabled btn-sm d-none d-sm-inline-block" role="button" style="background: rgba(78,115,223,0);color: #332c1f;border-color: rgba(51,44,31,0);">&nbsp;<br>&nbsp;<i class="far fa-clock" style="margin-right: 5px;"></i>{{cur_date}}<br><br></a>
+    </div>
 
     <div class="row">
         {{!-- <div class="col-lg-12 col-xl-12 col-xxl-12"> --}}
